ref: lessen the gap between note items and fixed abnormal behaviour of editor when contents are overflowing

--- a/src/App.scss
+++ b/src/App.scss
@@ -54,7 +54,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 a.active {
 	transition: all 100ms ease-in-out;
-	background-color: #878a8c30;
+	background-color: #878a8c20;
 	border-left-color: #6b7ff2;
 	border-left-width: 4px;
 }
