--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -35,6 +35,9 @@
 }
 
 #sidebar {
+	z-index: 10;
+	box-shadow: 0px 2px 5px 2px rgba($color: #000000, $alpha: 0.4);
+
 	ul {
 		&::-webkit-scrollbar {
 			width: 0.3em;
